# velib-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RESTRUCTURE_PLAN.md  claude-code-config.json  deny.toml  install.sh  llms.txt  mcp-config-examples.json  test_clippy_fix.rs
.cargo/husky/hooks/: pre-commit
.claude/: etat_partage.json
.github/workflows/: ci.yml  deploy.yml  vulnerability-fix.yml  vulnerability-scan.yml
docs/: error_handling.md
docs/api/: data_analysis.md  mcp_interface_spec.md  mcp_schemas.md
docs/context/: etat_actuel.md
docs/development/: project_prompt.md
docs/security/: automated-vulnerability-management.md
scripts/: test-security-workflows.sh  test-workflow-scenarios.sh
src/: error.rs  lib.rs  main.rs  retry.rs  types.rs
src/data/: cache.rs  client.rs  mod.rs  retry.rs
src/error/: tests.rs
src/mcp/: documentation.rs  handlers.rs  mod.rs  server.rs  types.rs
src/server/: config.rs  mod.rs
tests/: data_client_tests.rs  data_integration_tests.rs  integration_test.rs  integration_tests.rs  license_compliance_test.rs  mcp_documentation_tests.rs  mcp_resource_tests.rs  smoke_test.rs
