[package]
name = "velib-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dominicburkart/velib-mcp"
description = "MCP server for Velib Paris bike sharing data"
keywords = ["mcp", "velib", "paris", "bike-sharing", "transport"]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
fastrand = "2.0"

[dev-dependencies]
cargo-husky = "1"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
